bundled_metadata/force-app/main/default/objects/Contact/fields/AFH_Activation_URL__c.field-meta.xml
<CustomField>
    <fullName>AFH_Activation_URL__c</fullName>
    <description>This is to store activation url</description>
    <label>Activation Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>