bundled_metadata/force-app/main/default/objects/Contact/fields/AFH_Adv_Consent_Later__c.field-meta.xml
<CustomField>
    <fullName>AFH_Adv_Consent_Later__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advertisement Consent Later</label>
    <type>Checkbox</type>
</CustomField>