bundled_metadata/force-app/main/default/objects/Contact/fields/AFH_IsAFH_Contact__c.field-meta.xml
<CustomField>
    <fullName>AFH_IsAFH_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the contact is an AFH contact.</description>
    <label>Is Contact</label>
    <type>Checkbox</type>
</CustomField>