bundled_metadata/force-app/main/default/objects/Contact/fields/AFH_Mktg_Consent_Later__c.field-meta.xml
<CustomField>
    <fullName>AFH_Mktg_Consent_Later__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is used for marketing cloud to track which account has opted the marketing consent later.</description>
    <label>Marketing Consent Later</label>
    <type>Checkbox</type>
</CustomField>