bundled_metadata/force-app/main/default/objects/Contact/fields/AFH_Prospect__c.field-meta.xml
<CustomField>
    <fullName>AFH_Prospect__c</fullName>
    <formula>IF( AFH_User_Id__c = NULL, &apos;Non Member&apos;, &apos;Member&apos;)</formula>
    <label>Prospect</label>
    <type>Text</type>
</CustomField>