bundled_metadata/force-app/main/default/objects/Contact/fields/AFH_Rejection_Comment__c.field-meta.xml
<CustomField>
    <fullName>AFH_Rejection_Comment__c</fullName>
    <label>Rejection Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>