bundled_metadata/force-app/main/default/objects/Contact/fields/AFH_ShowActivationButton__c.field-meta.xml
<CustomField>
    <fullName>AFH_ShowActivationButton__c</fullName>
    <formula>AND(
    NOT(ISBLANK(AFH_User_Id__c)),
    ISBLANK(AFH_Activation_URL__c),
    OR(
        ISPICKVAL($User.Persona__c, &quot;AFH Representative&quot;),
        ISPICKVAL($User.Persona__c, &quot;AFH Approver&quot;)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowActivationButton</label>
    <type>Checkbox</type>
</CustomField>