bundled_metadata/force-app/main/default/objects/Contact/fields/AFH_ShowButton__c.field-meta.xml
<CustomField>
    <fullName>AFH_ShowButton__c</fullName>
    <formula>AND(
ISPICKVAL(AFH_Approval_Status__c, &quot;Pending&quot;),

OR(
ISPICKVAL($User.Persona__c, &quot;AFH Representative&quot;),
ISPICKVAL($User.Persona__c, &quot;AFH Approver&quot;)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowButton</label>
    <type>Checkbox</type>
</CustomField>