bundled_metadata/force-app/main/default/objects/Contact/fields/AFH_SignupActivationUrl__c.field-meta.xml
<CustomField>
    <fullName>AFH_SignupActivationUrl__c</fullName>
    <label>SignupActivationUrl</label>
    <type>TextArea</type>
</CustomField>