bundled_metadata/force-app/main/default/objects/Contact/fields/AFH_User_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>AFH_User_Created_Date__c</fullName>
    <label>User Created Date</label>
    <type>Date</type>
</CustomField>