bundled_metadata/force-app/main/default/objects/Contact/fields/AFH_User_Id__c.field-meta.xml
<CustomField>
    <fullName>AFH_User_Id__c</fullName>
    <description>Stores the user’s unique identifier.</description>
    <label>User Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>