bundled_metadata/force-app/main/default/objects/Contact/fields/CUST_Id__c.field-meta.xml
<CustomField>
    <fullName>CUST_Id__c</fullName>
    <label>Account External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>