bundled_metadata/force-app/main/default/objects/Contact/fields/GDPR__c.field-meta.xml
<CustomField>
    <fullName>GDPR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDPR</label>
    <type>Checkbox</type>
</CustomField>