bundled_metadata/force-app/main/default/objects/Contact/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>The contact&apos;s job title</description>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Store Owner</fullName>
            </value>
            <value>
                <fullName>Store Manager</fullName>
            </value>
            <value>
                <fullName>Section Manager</fullName>
            </value>
            <value>
                <fullName>Store Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>