bundled_metadata/force-app/main/default/objects/Contact/fields/Primary_or_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Primary_or_Secondary__c</fullName>
    <description>Denotes if contact is the primary or secondary contact for an account</description>
    <label>Primary / Secondary Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>